# latex-crossref

./: README.md  TAGS  latex-crossref.cabal  stack.yaml
data/: converted.tex  simple.tex
src/Text/LaTeX/: CrossRef.hs
src/Text/LaTeX/CrossRef/: Orphans.hs  Types.hs
