name:                latex-crossref
version:             0.1.0.0
synopsis:            Simulating Cross-reference in LaTeX
description:         Please see README.md
homepage:            https://github.com/konn/latex-crossref#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.LaTeX.CrossRef
  other-modules:       Text.LaTeX.CrossRef.Orphans
                       Text.LaTeX.CrossRef.Types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , unordered-containers
                     , hashable
                     , text
                     , bytestring
                     , mtl
                     , HaTeX
                     , generic-deriving
                     , lens
                     , reflection
                     , tardis
  default-language:    Haskell2010
  ghc-options:         -Wall

executable latex-crossref-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , latex-crossref
  default-language:    Haskell2010

test-suite latex-crossref-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , latex-crossref
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/konn/latex-crossref
